--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
           if: ${{ github.event_name == 'pull_request' }}
           uses: appleboy/telegram-action@v0.1.1
           with:
-           to: ${{ secrets.TELEGRAM_TO }}
+           to: ${{ secrets.TELEGRAM_CHAT_ID }}
            token: ${{ secrets.TELEGRAM_TOKEN }}
            args: User ${{github.actor}} in ${{ github.repository }} repository made ${{ github.event_name }}. Job ${{github.job}} URL - "${{ github.event.pull_request.title }} --> ${{ github.event.pull_request.html_url }}"
 
@@ -22,6 +22,6 @@ jobs:
           if: ${{ github.event_name == 'push' }}
           uses: appleboy/telegram-action@v0.1.1
           with:
-            to: ${{ secrets.TELEGRAM_TO }}
+            to: ${{ secrets.TELEGRAM_CHAT_ID }}
             token: ${{ secrets.TELEGRAM_TOKEN }}
             args: User ${{github.actor}} in ${{ github.repository }} repository made ${{ github.event_name }}. Job ${{github.job}} URL - "${{ github.event.head_commit.message }} --> ${{ github.event.head_commit.url }}"
